bynkc/tests/fixtures/negative/206_actor_binder_shadows_param/src/demo.bynk
context demo

service api from http {
  on POST("/echo") (body: String) -> Effect[HttpResult[String]] by body: Visitor {
    Ok("ok")
  }
}
